private_server/guard/CELL-31/Q-25/error.txt
  File "/kunden/homepages/8/d657042007/htdocs/CodeSet/private_server/guard/CELL-31/Q-25/31-25.py", line 5
    print(Monty Python)
                     ^
SyntaxError: invalid syntax
